# shiori

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Modelfile  README.md  SECURITY.md  SUPPORT.md  justfile  qdrant.local.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml
src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs  templates.rs
src/services/: deck.rs  export.rs  external.rs  material.rs  mod.rs  search.rs  text.rs
templates/: base.html  deck_detail.html  index.html  material_detail.html  search_detail.html
tests/: e2e.rs
