[package]
name = "shiori"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first semantic search and export for Anki decks and study materials"
default-run = "shiori"
publish = false
readme = "README.md"
keywords = ["anki", "search", "qdrant", "retrieval"]
exclude = [
    "/.DS_Store",
    "/.local/**",
    "/data/**",
    "/duplicate_cleanup_report.txt",
    "/models/**",
    "/qdrant.local.yaml",
]

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.100"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.8.8", features = ["multipart"] }
chrono = { version = "0.4.42", features = ["serde"] }
genanki-rs = "0.4.0"
html2text = "0.12.6"
qdrant-client = "1.15.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.25.4", features = ["bundled", "chrono"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.11.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "v5", "serde"] }
walkdir = "2.5.0"
zip = "2.4.2"
pdf-extract = "0.7.12"
ureq = { version = "2.12.1", features = ["json"] }
