[package]
name = "shiori"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first semantic search and export for Anki decks and study materials"
default-run = "shiori"
publish = false
readme = "README.md"
keywords = ["anki", "search", "qdrant", "retrieval"]
exclude = [
    "/.DS_Store",
    "/.local/**",
    "/data/**",
    "/duplicate_cleanup_report.txt",
    "/models/**",
    "/qdrant.local.yaml",
]

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.100"
askama = "0.14.0"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = { version = "0.4.42", features = ["serde"] }
genanki-rs = "0.4.0"
html2text = "0.17.1"
qdrant-client = "1.18.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.25.4", features = ["bundled", "chrono"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.23.0"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.23.2", features = ["v4", "v5", "serde"] }
walkdir = "2.5.0"
zip = "7.2.0"
pdf-extract = "0.10.0"
ureq = { version = "3.3.0", features = ["json"] }
